--- a/index.html
+++ b/index.html
@@ -47,21 +47,41 @@
                 <h2 class="visually-hidden">Our goal is to identify the business</h2>
                 <ul class="hero_list">
                     <li class="hero_list_item">
+                        <div class="hero_list_item_icon">
+                            <svg class="hero_list_item_icon_svg">
+                                <use href="./images_1/symbol.svg#icon-antenna" width="64px"></use>
+                            </svg>
+                        </div>
                         <h3 class="hero_list_item_title">Strategy</h3>
                         <p class="hero_list_item_text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="hero_list_item">
+                        <div class="hero_list_item_icon">
+                            <svg class="hero_list_item_icon_svg">
+                                <use href="./images_1/symbol.svg#icon-clock" width="64px"></use>
+                            </svg>  
+                        </div>
                         <h3 class="hero_list_item_title">Punctuality</h3>
                         <p class="hero_list_item_text">Bring the key message to the brand's audience for the best price within the shortest possible
                             time.</p>
                     </li>
                     <li class="hero_list_item">
+                        <div class="hero_list_item_icon">
+                            <svg class="hero_list_item_icon_svg">
+                                <use href="./images_1/symbol.svg#icon-diagram"  width="64px"></use>
+                            </svg>
+                        </div>
                         <h3 class="hero_list_item_title">Diligence</h3>
                         <p class="hero_list_item_text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="hero_list_item">
+                        <div class="hero_list_item_icon">
+                            <svg class="hero_list_item_icon_svg">
+                                <use href="./images_1/symbol.svg#icon-astronaut" width="64px"></use>
+                            </svg>
+                        </div>
                         <h3 class="hero_list_item_title">Technologies</h3>
                         <p class="hero_list_item_text">Design practice focused on digital experiences. We bring forth a deep passion for
                             problem-solving.</p>
@@ -74,13 +94,13 @@
                 <h2 class="content_title">What are we doing</h2>
                 <ul class="content_title_list">
                     <li class="content_title_list_item">
-                        <img src="./images/img_1.jpg" alt="monitor" width="360">
+                        <img src="./images_1/img_1.jpg" alt="monitor" width="360">
                     </li>
                     <li class="content_title_list_item">
-                        <img src="./images/img_2.jpg" alt="smartphone" width="360">
+                        <img src="./images_1/img_2.jpg" alt="smartphone" width="360">
                     </li>
                     <li class="content_title_list_item">
-                        <img src="./images/img_3.jpg" alt="smartphone and laptop" width="360">
+                        <img src="./images_1/img_3.jpg" alt="smartphone and laptop" width="360">
                     </li>
                 </ul>
             </div>
@@ -90,41 +110,256 @@
                 <h2 class="box_title">Our Team</h2>
                 <ul class="box_list">
                     <li class="box_list_item">
-                        <img src="./images/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
+                        <img src="./images_1/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260">
                         <div class="box_list_item_title-text">
                             <h3 class="box_list_item_title">Mark Guerrero</h3>
                             <p class="box_list_item_text">Product Designer</p>
+                            <ul class="box_list_social">
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="box_list_item">
-                        <img src="./images/tom_ford.jpg" alt="tom_ford" width="264" height="260">
+                        <img src="./images_1/tom_ford.jpg" alt="tom_ford" width="264" height="260">
                         <div class="box_list_item_title-text">
                             <h3 class="box_list_item_title">Tom Ford</h3>
                             <p class="box_list_item_text">Frontend Developer</p>
+                            <ul class="box_list_social">
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="box_list_item">
-                        <img src="./images/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
+                        <img src="./images_1/camila_garcia.jpg" alt="camila_garcia" width="264" height="260">
                         <div class="box_list_item_title-text">
                             <h3 class="box_list_item_title">Camila Garcia</h3>
                             <p class="box_list_item_text">Marketing</p>
+                            <ul class="box_list_social">
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="box_list_item">
-                        <img src="./images/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
+                        <img src="./images_1/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260">
                         <div class="box_list_item_title-text">
                             <h3 class="box_list_item_title">Daniel Wilson</h3>
                             <p class="box_list_item_text">UI Designer</p>
+                            <ul class="box_list_social">
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-twitter">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-facebook">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="box_list_social_item">
+                                    <a href="" class="box_list_social_link">
+                                        <svg class="social_link_svg" width="16px" height="16px">
+                                            <use href="./images_1/symbol.svg#icon-linkedin">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+        <section class="customers">
+            <div class="container">
+                <h2 class=" Customers_title box_title">Customers</h2>
+                <ul class="logo_list">
+                    <li class="logo_list_item">
+                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                            <use href="./images_1/symbol.svg#icon-Logo-1"></use>
+                        </svg>
+                    </li>
+                    <li class="logo_list_item">
+                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                            <use href="./images_1/symbol.svg#icon-Logo-2"></use>
+                        </svg>
+                    </li>
+                    <li class="logo_list_item">
+                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                            <use href="./images_1/symbol.svg#icon-Logo-3"></use>
+                        </svg>
+                    </li>
+                    <li class="logo_list_item">
+                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                            <use href="./images_1/symbol.svg#icon-Logo-4"></use>
+                        </svg>
+                    </li>
+                    <li class="logo_list_item">
+                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                            <use href="./images_1/symbol.svg#icon-Logo-5"></use>
+                        </svg>
+                    </li>
+                    <li class="logo_list_item">
+                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                            <use href="./images_1/symbol.svg#icon-Logo-6"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a class="footer_link" href="./index.html"><span class="footer_logo_span">Web</span>Studio</a>
-            <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container footer_container">
+            <div class="footer_logo">
+                <a class="footer_link" href="./index.html"><span class="footer_logo_span">Web</span>Studio</a>
+                <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                </div>
+            <div class="social_media_link">
+                <h3 class="social_media_link_title">
+                    Social media
+                </h3>
+                <ul class="box_list_social_footer">
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-instagram">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
