--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                     <ul class="section_list">
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/banking_app_interface_concept.jpg" alt="banking_app_interface_concept" width="360">
+                            <img src="./images_1/banking_app_interface_concept.jpg" alt="banking_app_interface_concept" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Banking App Interface Concept</h2>
                                 <p class="section_items_text">App</p>
@@ -58,7 +58,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/cashless_payment.jpg" alt="cashless_payment" width="360">
+                            <img src="./images_1/cashless_payment.jpg" alt="cashless_payment" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Cashless Payment</h2>
                                 <p class="section_items_text">Marketing lo</p>
@@ -67,7 +67,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/meditaion_app.jpg" alt="meditaion_app" width="360">
+                            <img src="./images_1/meditaion_app.jpg" alt="meditaion_app" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Cashless Payment</h2>
                                 <p class="section_items_text">Marketing</p>
@@ -76,7 +76,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/taxi_service.jpg" alt="taxi_service" width="360">
+                            <img src="./images_1/taxi_service.jpg" alt="taxi_service" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Taxi Service</h2>
                                 <p class="section_items_text">Marketing</p>
@@ -85,7 +85,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/screen_illustrations.jpg" alt="screen_illustrations" width="360">
+                            <img src="./images_1/screen_illustrations.jpg" alt="screen_illustrations" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Screen Illustrations</h2>
                                 <p class="section_items_text">Design</p>
@@ -94,7 +94,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/online_courses.jpg" alt="online_courses" width="360">
+                            <img src="./images_1/online_courses.jpg" alt="online_courses" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Online Courses</h2>
                                 <p class="section_items_text">Marketing</p>
@@ -103,7 +103,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/instagram_stories_concept.jpg" alt="instagram_stories_concept" width="360">
+                            <img src="./images_1/instagram_stories_concept.jpg" alt="instagram_stories_concept" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Instagram Stories Concept</h2>
                                 <p class="section_items_text">Design</p>
@@ -112,7 +112,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/organic_food.jpg" alt="organic_food" width="360">
+                            <img src="./images_1/organic_food.jpg" alt="organic_food" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Organic Food</h2>
                                 <p class="section_items_text">Web Site</p>
@@ -121,7 +121,7 @@
                     </li>
                     <li class="section_items">
                         <a href="#">
-                            <img src="./images/fresh_coffee.jpg" alt="fresh_coffee" width="360">
+                            <img src="./images_1/fresh_coffee.jpg" alt="fresh_coffee" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Fresh Coffee</h2>
                                 <p class="section_items_text">Web Site</p>
@@ -133,10 +133,51 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a class="footer_link" href="./index.html"><span class="footer_logo_span">Web</span>Studio</a>
-            <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+        <div class="container footer_container">
+            <div class="footer_logo">
+                <a class="footer_link" href="./index.html"><span class="footer_logo_span">Web</span>Studio</a>
+                <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing &
+                    growth solutions.</p>
+            </div>
+            <div class="social_media_link">
+                <h3 class="social_media_link_title">
+                    Social media
+                </h3>
+                <ul class="box_list_social_footer">
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-instagram">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-twitter">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-facebook">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="box_list_social_item_footer">
+                        <a href="" class="box_list_social_link_footer">
+                            <svg class="social_link_svg_footer" width="24px" height="24px">
+                                <use href="./images_1/symbol.svg#icon-linkedin">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
