--- a/index.html
+++ b/index.html
@@ -281,34 +281,46 @@
                 <h2 class=" Customers_title box_title">Customers</h2>
                 <ul class="logo_list">
                     <li class="logo_list_item">
-                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                        <a class="logo-list-item-link" href="#">
+                            <svg class="logo_list_item_border_svg" width="104px" height="56px">
                             <use href="./images_1/symbol.svg#icon-Logo-1"></use>
-                        </svg>
+                            </svg>
+                        </a>
                     </li>
                     <li class="logo_list_item">
-                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                        <a class="logo-list-item-link" href="#">
+                            <svg class="logo_list_item_border_svg" width="104px" height="56px">
                             <use href="./images_1/symbol.svg#icon-Logo-2"></use>
-                        </svg>
+                            </svg>
+                        </a>
                     </li>
                     <li class="logo_list_item">
-                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                        <a class="logo-list-item-link" href="#">
+                            <svg class="logo_list_item_border_svg" width="104px" height="56px">
                             <use href="./images_1/symbol.svg#icon-Logo-3"></use>
-                        </svg>
+                            </svg>
+                        </a>
                     </li>
                     <li class="logo_list_item">
-                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                        <a class="logo-list-item-link" href="#">
+                            <svg class="logo_list_item_border_svg" width="104px" height="56px">
                             <use href="./images_1/symbol.svg#icon-Logo-4"></use>
-                        </svg>
+                            </svg>
+                        </a>
                     </li>
                     <li class="logo_list_item">
-                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                        <a class="logo-list-item-link" href="#">
+                            <svg class="logo_list_item_border_svg" width="104px" height="56px">
                             <use href="./images_1/symbol.svg#icon-Logo-5"></use>
-                        </svg>
+                            </svg>
+                        </a>
                     </li>
                     <li class="logo_list_item">
-                        <svg class="logo_list_item_border_svg" width="104px" height="56px">
+                        <a class="logo-list-item-link" href="#">
+                            <svg class="logo_list_item_border_svg" width="104px" height="56px">
                             <use href="./images_1/symbol.svg#icon-Logo-6"></use>
-                        </svg>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -322,9 +334,9 @@
                 <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
                 </div>
             <div class="social_media_link">
-                <h3 class="social_media_link_title">
+                <p class="social_media_link_title">
                     Social media
-                </h3>
+                </p>
                 <ul class="box_list_social_footer">
                     <li class="box_list_social_item_footer">
                         <a href="" class="box_list_social_link_footer">
