--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                 </ul>
                     <ul class="section_list">
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/banking_app_interface_concept.jpg" alt="banking_app_interface_concept" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Banking App Interface Concept</h2>
@@ -57,7 +57,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/cashless_payment.jpg" alt="cashless_payment" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Cashless Payment</h2>
@@ -66,7 +66,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/meditaion_app.jpg" alt="meditaion_app" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Cashless Payment</h2>
@@ -75,7 +75,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/taxi_service.jpg" alt="taxi_service" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Taxi Service</h2>
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/screen_illustrations.jpg" alt="screen_illustrations" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Screen Illustrations</h2>
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/online_courses.jpg" alt="online_courses" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Online Courses</h2>
@@ -102,7 +102,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/instagram_stories_concept.jpg" alt="instagram_stories_concept" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Instagram Stories Concept</h2>
@@ -111,7 +111,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/organic_food.jpg" alt="organic_food" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Organic Food</h2>
@@ -120,7 +120,7 @@
                         </a>
                     </li>
                     <li class="section_items">
-                        <a href="#">
+                        <a class="section_items_link" href="#">
                             <img src="./images_1/fresh_coffee.jpg" alt="fresh_coffee" width="360">
                             <div class="section_items_title_text">
                                 <h2 class="section_items_title">Fresh Coffee</h2>
@@ -140,9 +140,9 @@
                     growth solutions.</p>
             </div>
             <div class="social_media_link">
-                <h3 class="social_media_link_title">
+                <p class="social_media_link_title">
                     Social media
-                </h3>
+                </p>
                 <ul class="box_list_social_footer">
                     <li class="box_list_social_item_footer">
                         <a href="" class="box_list_social_link_footer">
